--- a/lec2/page1.html
+++ b/lec2/page1.html
@@ -9,7 +9,16 @@
 	</head>
 
 	<body>
-		
+		<p>
+			<a name="Filler">
+			<h2>Filler Text</h2>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. In arcu eros, vestibulum vitae odio a, mollis dictum nulla. Vestibulum eu ipsum vel nisl vestibulum volutpat id sed mauris. Donec sit amet commodo lacus. Proin at ex mollis elit tristique tempus. Cras quis malesuada massa, eu aliquet sapien. Aliquam interdum, sapien nec semper maximus, lectus ante dictum velit, quis dapibus eros justo eget dui. Fusce eget consequat nisl. Integer elementum ultrices massa, vel hendrerit diam accumsan ac
+		</p>
+		<a href="https://danacfc.github.io/IASC-1P02/lec2/page2.html">Click for Page 2</a>
+		<br />
+		<a href="page2.html">Click for Page 2</a>
+		<br />
+		<a href="#Filler">Back to Top</a>
 	</body>
 
 </html>
