Assignment 1 and Lec3 edits

--- a/Lec3.html
+++ b/Lec3.html
@@ -14,8 +14,8 @@
 
 		<div>
 			<p class="green">This is some text</p>
-      <p class="orange">More <text class="red"> text </text><text class="orange"> than before</text></p>
-      <p class="pink">I <text class="yellow">can't</text> believe it's not more text</p>
+      <p class="orange">More <span class="red">text </span>than before</p>
+      <p class="pink">I <span class="yellow">can't</span> believe it's not more text</p>
 		</div>
 
 	</body>
