--- a/Lab3/L3E3.html
+++ b/Lab3/L3E3.html
@@ -14,7 +14,7 @@
 
 		<div>
 			<p>Here is some text</p>
-      <img src="https://i.pinimg.com/originals/f5/64/8a/f5648a517ed3c7ec7c99486591aa8bb2.jpg" />
+      <img src="https://i.pinimg.com/originals/f5/64/8a/f5648a517ed3c7ec7c99486591aa8bb2.jpg" alt="zoomed in picture of the stay puft marshmallow man" />
 		</div>
 
 	</body>
