--- a/Assignments/Assignment2.html
+++ b/Assignments/Assignment2.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Assignment 2</title>
-<link href="Assignment2.css" rel="stylesheet" type="text/css" />
-</head>
+  <head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <title>Assignment 2</title>
+    <link href="Assignment2.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
 
-<div id="wrapper">
-  <h6 id="fixed">fixed</h6>
-<div id="header">
-  <a name="Top" />
-  <h2>This is a header</h2>
-</div>
-<div id="leftbody">
-  <p class="absolute">This is the left body</p>
-</div>
-<div id="rightbody">
-  <h3 class="relative">This is a smaller header</h3>
-  <p>This is a paragraph</p>
-  <img src="mouse.jpg" width="200" alt="cute mouse" />
-  <ul class="capitalize">
-    <li>List item</li>
-    <li>List item</li>
-    <li>List item</li>
-  </ul>
-  <a href="example.html">Relative Link</a>
-  <p>This is <span class="capitalize">another</span> paragraph</p>
-  <img src="https://news.okstate.edu/articles/communications/images/banner_guinea_pigs.jpg" width="200" alt="a pile of guinea pigs" />
-  <ol>
-    <li>List item 1</li>
-    <li>List item 2</li>
-    <li>List item 3</li>
-  </ol>
-  <a href="https://lchs.ca/adopt/">Absolute Link</a>
-</div>
-<div id="bottom">
-  <a href="#Top">Back to top</a>
-</div>
+    <div id="wrapper">
+      <h6 id="fixed">fixed</h6>
 
-</div>
+      <div id="header">
+        <a name="Top" />
+        <h2>This is a header</h2>
+      </div>
 
-</body>
+      <div id="leftbody" class="color">
+        <p class="absolute">This is the left body</p>
+      </div>
+
+      <div id="rightbody" class="font">
+        <h3 class="relative">This is a smaller header</h3>
+        <p class="size">This is a paragraph</p>
+        <img src="mouse.jpg" width="200" alt="cute mouse" />
+        <ul class="uppercase">
+          <li>List item</li>
+          <li>List item</li>
+          <li>List item</li>
+        </ul>
+        <a href="example.html">Relative Link</a>
+        <p>This is <span class="uppercase">another</span> paragraph</p>
+        <img src="https://news.okstate.edu/articles/communications/images/banner_guinea_pigs.jpg" width="200" alt="a pile of guinea pigs" />
+        <ol>
+          <li>List item 1</li>
+          <li>List item 2</li>
+          <li>List item 3</li>
+        </ol>
+        <a href="https://lchs.ca/adopt/">Absolute Link</a>
+      </div>
+
+      <div id="bottom">
+        <a href="#Top">Back to top</a>
+      </div>
+
+    </div>
+
+  </body>
 
 </html>
