--- a/Assignments/Assignment4/A4P1.html
+++ b/Assignments/Assignment4/A4P1.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<title>Home Page</title>
+	<title>Dana's Website</title>
 	<link href="A4P1.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="A4P1.js"></script>
 	<script src="https://kit.fontawesome.com/9d10585fc1.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
 
 	<div id="wrapper">
 		<div id="logo">
-			<img src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
+			<img class="emphasis" src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
 			<p type="button" onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
 		</div>
 		<div id="dateDisplay">
@@ -26,28 +26,27 @@
 		<div id="navigation" class="sidenav">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<h4><a href="A4P1.html">Home</a></h4>
-			<h4><a href="A4P2.html">Page 2</a></h4>
-			<h4><a href="A4P3.html">Page 3</a></h4>
-			<h4><a href="A4P4.html">Page 4</a></h4>
+			<h4><a href="A4P2.html">Art</a></h4>
+			<h4><a href="A4P3.html">Fun</a></h4>
 			<!-- navigation overlay code from https://www.w3schools.com/howto/howto_js_sidenav.asp -->
 		</div>
 		<div id="content">
 			<div class="slideshow">
 				<div class="slides fade" style="display:block;">
 					<div class="numbertext">1 / 3</div>
-					<img src="me.jfif" height="300px" />
+					<img src="me.jfif" height="500px" />
 					<div class="caption">Me</div>
 				</div>
 
 				<div class="slides fade">
 					<div class="numbertext">2 / 3</div>
-					<img src="penny.jpg" height="300px" />
+					<img src="penny.jpg" height="500px" />
 					<div class="caption">My dog, Penny</div>
 				</div>
 
 				<div class="slides fade">
 					<div class="numbertext">3 / 3</div>
-					<img src="animalcrossing.jfif" height="300px" />
+					<img src="animalcrossing.jfif" height="500px" />
 					<div class="caption">My character in my favourite video game right now</div>
 				</div>
 				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -61,10 +60,21 @@
 				<span class="dot" onclick="currentSlide(3)"></span>
 			</div>
 			<!--slideshow code from https://www.w3schools.com/howto/howto_js_slideshow.asp -->
-			<p> Hi, my name is Dana and this is a website to help you get to know me better! I'm a fourth year Bachelor of Accounting Co-op student at Brock University.</p>
+			<h4 style="text-align:center;">Hi, my name is Dana!</h4>
+			<p style="text-align:center;">This is a website to help you get to know me better! I'm a fourth year Bachelor of Accounting Co-op student at Brock University.
+				In my spare time I like playing video games like Animal Crossing, Valorant, and Among Us and trying different mediums of art.
+				I’ve dabbled in acrylic, oil, ink and watercolour paints, embroidery, crochet, knitting, and more.
+				Basically, if you can think of an art medium, I've probably tried it. In quarantine, I added sewing to that list and made a shirt for a friend of mine.
+				If you want to see some of the art I've created, you can go to the <a href="A4P2.html">Art</a> tab.
+				I taught myself a little bit of HTML in high school, but I didn’t make it much further than changing the font colour and making headers.
+				I’ve learned a lot this semester and this website is also to show that off!
+				If you want to check out some fun interactive elements I've added to fidget with, you can go to the <a href="A4P3.html">Fun</a> tab.
+				To access these, you can click the linked words in this introduction or use the menu button under the home icon at the top!
+				I hope you enjoy my website and all the elements I've put in for you to interact with. Thanks for visiting!</p>
+				
 		</div>
 		<div id="footer">
-			Put stuff here
+			<span>Thanks for visiting!</span>
 			<p class="social">Connect with me: <a href="https://twitter.com/ItsaMeDana" target="_blank"><i class="fab fa-twitter"></i></a>
 			<a href="https://www.instagram.com/danacfc/" target="_blank"><i class="fab fa-instagram"></i></a>
 			<a href="https://ca.linkedin.com/in/dana-carreon-27a19014b?trk=people-guest_people_search-card" target="_blank"><i class="fab fa-linkedin"></i></a></p>
