--- a/Assignments/Assignment4/A4P2.html
+++ b/Assignments/Assignment4/A4P2.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<title>Page 1</title>
+	<title>Dana's Website</title>
 	<link href="A4P2.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="A4P2.js"></script>
 	<script src="https://kit.fontawesome.com/9d10585fc1.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
 
 <div id="wrapper">
 	<div id="logo">
-		<img src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
+		<img class="emphasis" src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
 		<p type="button" onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
 	</div>
 	<div id="dateDisplay">
@@ -26,16 +26,75 @@
 	<div id="navigation" class="sidenav">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		<h4><a href="A4P1.html">Home</a></h4>
-		<h4><a href="A4P2.html">Page 2</a></h4>
-		<h4><a href="A4P3.html">Page 3</a></h4>
-		<h4><a href="A4P4.html">Page 4</a></h4>
+		<h4><a href="A4P2.html">Art</a></h4>
+		<h4><a href="A4P3.html">Fun</a></h4>
 		<!-- navigation overlay code from https://www.w3schools.com/howto/howto_js_sidenav.asp -->
 	</div>
 	<div id="content">
-		put stuff here
+		<h3>Hobbies</h3>
+		<p>With social distancing and the pandemic, I've made a lot of art. I like to create with watercolour and acrylic paints and I've recently been planning a piece that combines those with embroidery.
+		I like creating things that can be worn like embroidered patches, clothes, and hats for my friend's cat Squash.</p>
+		<br />
+		<div style="transform:scale(0.65); position:relative; top:-200px; right:50px; width:500px; float:left;">
+			<h3>Which one of these art pieces do you think I made?</h3>
+			<p>Choose 1 answer</p>
+			<hr />
+			<div id="block1" style="padding:10px;">
+				<label for="option1" style="padding:5px;">
+					<input type="radio" name="option" value="winter" id="option1" style="transform:scale(1.6); margin-right:10px; vertical-align:middle; margin-top:-2px;" />
+					<img src="stickfigure.jpg" alt="clip art of a stick man painting a stick figure" width="200px" /></label>
+				<span id="result1"></span>
+			</div>
+			<div id="block2" style="padding:10px;">
+				<label for="option2" style="padding:5px;">
+					<input type="radio" name="option" value="monalisa" id="option2" style="transform:scale(1.6); margin-right:10px; vertical-align:middle; margin-top:-2px;" />
+					<img src="monalisa.jpg" alt="painting of the mona lisa" width="200px" /></label>
+				<span id="result2"></span>
+			</div>
+			<div id="block3" style="padding:10px;">
+				<label for="option3" style="padding:5px;">
+					<input type="radio" name="option" value="mountain" id="option3" style="transform:scale(1.6); margin-right:10px; vertical-align:middle; margin-top:-2px;" />
+					<img src="mountainScene.jpg" alt="painting of a mountain and lake scene" width="200px;" /></label>
+				<span id="result3"></span>
+			</div>
+			<div id="block4" style="padding:10px;">
+				<label for="option4" style="padding:5px;">
+					<input type="radio" name="option" value="lion" id="option4" style="transform:scale(1.6); margin-right:10px; vertical-align:middle; margin-top:-2px;" />
+					<img src="lionart.jpg" alt="painting of a lion" width="200px" /></label>
+				<span id="result4"></span>
+			</div>
+			<hr />
+			<button type="button" id="submitButton" onclick="displayAnswer(); unhideArt()">Submit</button>
+			<a id="showAnswer"></a>
+		</div>
+		<!-- code for quiz from https://www.freecodecamp.org/news/multiple-choice-quiz-template/ -->
+		<div id="art" style="float:right; width:800px; margin-right:50px;">
+			<p>If you guessed the mountain landscape, you were right! That's one of my art pieces. I like to play with all sorts of mediums, though. Here are more things I've created!
+			Hover over the image for a short description of the work.</p>
+			<div class="wizardHat" height="300px" style="float:left;">
+				<img src="catWizard.jpg" alt="cat wearing a crocheted wizard hat" height="300px" />
+				<div class="caption1">Squash wearing a crocheted wizard hat</div>
+			</div>
+			<div class="peony" height="300px" style="float:left; position:relative; left:15px;">
+				<img src="embroidery.jpg" alt="embroidered patch of a peony" height="300px" />
+				<div class="caption2">An embroidered patch of a peony</div>
+			</div>
+			<div class="otter" height="300px" style="float:right;">
+				<img src="otterWizard.jpg" alt="painting of an otter wizard" height="300px" />
+				<div class="caption3">A watercolour painting of an otter wizard</div>
+			</div>
+			<div class="ocean" height="300px" style="float:left; position:relative; left:45px; clear:both;">
+				<img src="oceanEmbroidery.jpg" alt="embroidery of an underwater scene" height="300px" />
+				<div class="caption4">An embroidery of an underwater scene</div>
+			</div>
+			<div class="winter" height="300px" style="float:right; position:relative; right:45px;">
+				<img src="winterScene.jpg" alt="painting of a winter scene" height="300px" />
+				<div class="caption5">An acryllic painting of a winter scene</div>
+			</div>
+		</div>
 	</div>
 	<div id="footer">
-		Put stuff here
+		<span>Thanks for visiting!</span>
 		<p class="social">Connect with me: <a href="https://twitter.com/ItsaMeDana" target="_blank"><i class="fab fa-twitter"></i></a>
 		<a href="https://www.instagram.com/danacfc/" target="_blank"><i class="fab fa-instagram"></i></a>
 		<a href="https://ca.linkedin.com/in/dana-carreon-27a19014b?trk=people-guest_people_search-card" target="_blank"><i class="fab fa-linkedin"></i></a></p>
