--- a/Assignments/Assignment4/A4P3.html
+++ b/Assignments/Assignment4/A4P3.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<title>Page 2</title>
+	<title>Dana's Website</title>
 	<link href="A4P3.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="A4P3.js"></script>
 	<script src="https://kit.fontawesome.com/9d10585fc1.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
 
 <div id="wrapper">
 	<div id="logo">
-		<img src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
+		<img class="emphasis" src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
 		<p type="button" onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
 	</div>
 	<div id="dateDisplay">
@@ -26,16 +26,56 @@
 	<div id="navigation" class="sidenav">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		<h4><a href="A4P1.html">Home</a></h4>
-		<h4><a href="A4P2.html">Page 2</a></h4>
-		<h4><a href="A4P3.html">Page 3</a></h4>
-		<h4><a href="A4P4.html">Page 4</a></h4>
+		<h4><a href="A4P2.html">Art</a></h4>
+		<h4><a href="A4P3.html">Fun</a></h4>
 		<!-- navigation overlay code from https://www.w3schools.com/howto/howto_js_sidenav.asp -->
 	</div>
 	<div id="content">
-		put stuff here
+		<h3>Now for some fun!</h3>
+		<p>I was diagnosed with ADHD this year and in order to stay focused in class, I have to fidget with various objects.
+			This page of the website is for you, the user, to get a taste of what I have to do to pay attention in class.
+			Scrolling up and down on my mouse is one way that I fidget, so give it a try! As you can see, a little heart appears and disappears as you scroll.
+			Normally, I don’t get anything out of scrolling so this makes it more fun. I also like fidgeting with my keyboard and typing really quickly.
+			I especially like taking typing tests because they help me get some energy out when I'm feeling particularly hyperactive.
+			On the right you’ll see a section to “yell into the void.” You can type whatever you want, and it will post it onto the site.
+			Don’t worry, though, it’s all deleted when the page reloads so no need to worry about wasting space.
+			Lastly, since I can’t put a stress ball onto the page – at least not without some intense coding – I have a gradient transition.
+			Go hover your mouse over there and see it change!
+			If it hasn’t become obvious to you yet, this site was entirely just for me to have fun, but I hope you got some enjoyment out of it too.
+			Come back any time!</p>
+		<div class="heartDrawing" style="width:600px; float:left; height:300px;">
+			<h4>Draw a Heart</h4>
+			<p>Scroll down to draw a heart and watch it disappear as you scroll back up!</p>
+			<svg id="mySVG" onload="callDrawing()">
+				<path fill="none" stroke="red" stroke-width="3" id="heart" d="M 10,30
+       A 20,20 0,0,1 60,30
+       A 20,20 0,0,1 110,30
+       Q 110,60 60,100
+       Q 10,60 10,30 z" />
+				 <!-- heart code from https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/d -->
+			</svg>
+			<!-- svg code from https://www.w3schools.com/howto/howto_js_scrolldrawing.asp -->
+		</div>
+		<div class="comments" style="float:right; width:500px;">
+			<h4>Yell into the void!</h4>
+			<p>Any comment you leave will be deleted when you refresh the page so you can say whatever you want.</p>
+			<form>
+				Name: <input type="text" name="name" id="name" /><br />
+				Comment:<br />
+				<textarea name="comment" id="comment" /></textarea><br />
+				<input type="button" value="Submit" onclick="postComment()" />
+				<input type="reset" value="Clear Form" />
+			</form>
+			<br />
+			<div id="commentArea">
+			</div>
+		</div>
+		<div class="gradient">
+			<span style="position:relative; top:50%; font-size:40px;">Hover over here!</span>
+		</div>
 	</div>
 	<div id="footer">
-		Put stuff here
+		<span>Thanks for visiting!</span>
 		<p class="social">Connect with me: <a href="https://twitter.com/ItsaMeDana" target="_blank"><i class="fab fa-twitter"></i></a>
 		<a href="https://www.instagram.com/danacfc/" target="_blank"><i class="fab fa-instagram"></i></a>
 		<a href="https://ca.linkedin.com/in/dana-carreon-27a19014b?trk=people-guest_people_search-card" target="_blank"><i class="fab fa-linkedin"></i></a></p>
