--- a/Assignments/Assignment4/A4P2.html
+++ b/Assignments/Assignment4/A4P2.html
@@ -7,7 +7,7 @@
 	<title>Dana's Website</title>
 	<link href="A4P2.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="A4P2.js"></script>
-	<script src="https://kit.fontawesome.com/9d10585fc1.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/9d10585fc1.js" type="text/javascript"></script>
 </head>
 
 <body onload="insertDate()">
@@ -15,7 +15,7 @@
 <div id="wrapper">
 	<div id="logo">
 		<img class="emphasis" src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
-		<p type="button" onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
+		<p onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
 	</div>
 	<div id="dateDisplay">
 		<h5 id="date">Date</h5>
@@ -71,23 +71,23 @@
 		<div id="art" style="float:right; width:800px; margin-right:50px;">
 			<p>If you guessed the mountain landscape, you were right! That's one of my art pieces. I like to play with all sorts of mediums, though. Here are more things I've created!
 			Hover over the image for a short description of the work.</p>
-			<div class="wizardHat" height="300px" style="float:left;">
+			<div class="wizardHat" style="float:left;">
 				<img src="catWizard.jpg" alt="cat wearing a crocheted wizard hat" height="300px" />
 				<div class="caption1">Squash wearing a crocheted wizard hat</div>
 			</div>
-			<div class="peony" height="300px" style="float:left; position:relative; left:15px;">
+			<div class="peony" style="float:left; position:relative; left:15px;">
 				<img src="embroidery.jpg" alt="embroidered patch of a peony" height="300px" />
 				<div class="caption2">An embroidered patch of a peony</div>
 			</div>
-			<div class="otter" height="300px" style="float:right;">
+			<div class="otter" style="float:right;">
 				<img src="otterWizard.jpg" alt="painting of an otter wizard" height="300px" />
 				<div class="caption3">A watercolour painting of an otter wizard</div>
 			</div>
-			<div class="ocean" height="300px" style="float:left; position:relative; left:45px; clear:both;">
+			<div class="ocean" style="float:left; position:relative; left:45px; clear:both;">
 				<img src="oceanEmbroidery.jpg" alt="embroidery of an underwater scene" height="300px" />
 				<div class="caption4">An embroidery of an underwater scene</div>
 			</div>
-			<div class="winter" height="300px" style="float:right; position:relative; right:45px;">
+			<div class="winter" style="float:right; position:relative; right:45px;">
 				<img src="winterScene.jpg" alt="painting of a winter scene" height="300px" />
 				<div class="caption5">An acryllic painting of a winter scene</div>
 			</div>
