--- a/Assignments/Assignment4/A4P3.html
+++ b/Assignments/Assignment4/A4P3.html
@@ -7,7 +7,7 @@
 	<title>Dana's Website</title>
 	<link href="A4P3.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="A4P3.js"></script>
-	<script src="https://kit.fontawesome.com/9d10585fc1.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/9d10585fc1.js" type="text/javascript"></script>
 </head>
 
 <body onload="insertDate()">
@@ -15,7 +15,7 @@
 <div id="wrapper">
 	<div id="logo">
 		<img class="emphasis" src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
-		<p type="button" onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
+		<p onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
 	</div>
 	<div id="dateDisplay">
 		<h5 id="date">Date</h5>
@@ -59,10 +59,10 @@
 		<div class="comments" style="float:right; width:500px;">
 			<h4>Yell into the void!</h4>
 			<p>Any comment you leave will be deleted when you refresh the page so you can say whatever you want.</p>
-			<form>
+			<form action="none">
 				Name: <input type="text" name="name" id="name" /><br />
 				Comment:<br />
-				<textarea name="comment" id="comment" /></textarea><br />
+				<textarea name="comment" id="comment" rows="5" cols="50" /><br />
 				<input type="button" value="Submit" onclick="postComment()" />
 				<input type="reset" value="Clear Form" />
 			</form>
