--- a/Assignments/Assignment4/A4P1.html
+++ b/Assignments/Assignment4/A4P1.html
@@ -7,7 +7,7 @@
 	<title>Dana's Website</title>
 	<link href="A4P1.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="A4P1.js"></script>
-	<script src="https://kit.fontawesome.com/9d10585fc1.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/9d10585fc1.js" type="text/javascript"></script>
 </head>
 
 <body onload="insertDate()">
@@ -15,7 +15,7 @@
 	<div id="wrapper">
 		<div id="logo">
 			<img class="emphasis" src="house.jpg" alt="house icon" onclick="location.href='A4P1.html';" />
-			<p type="button" onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
+			<p onclick="openNav()"><i class="fas fa-bars"></i> Menu</p>
 		</div>
 		<div id="dateDisplay">
 			<h5 id="date">Date</h5>
@@ -34,19 +34,19 @@
 			<div class="slideshow">
 				<div class="slides fade" style="display:block;">
 					<div class="numbertext">1 / 3</div>
-					<img src="me.jfif" height="500px" />
+					<img src="me.jfif" alt="a selfie of me" height="500px" />
 					<div class="caption">Me</div>
 				</div>
 
 				<div class="slides fade">
 					<div class="numbertext">2 / 3</div>
-					<img src="penny.jpg" height="500px" />
+					<img src="penny.jpg" alt="a picture of my dog Penny laying on a lounge chair" height="500px" />
 					<div class="caption">My dog, Penny</div>
 				</div>
 
 				<div class="slides fade">
 					<div class="numbertext">3 / 3</div>
-					<img src="animalcrossing.jfif" height="500px" />
+					<img src="animalcrossing.jfif" alt="a screenshot of my character from Animal Crossing New Horizons" height="500px" />
 					<div class="caption">My character in my favourite video game right now</div>
 				</div>
 				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -71,7 +71,7 @@
 				If you want to check out some fun interactive elements I've added to fidget with, you can go to the <a href="A4P3.html">Fun</a> tab.
 				To access these, you can click the linked words in this introduction or use the menu button under the home icon at the top!
 				I hope you enjoy my website and all the elements I've put in for you to interact with. Thanks for visiting!</p>
-				
+
 		</div>
 		<div id="footer">
 			<span>Thanks for visiting!</span>
