--- a/Assignments/Assignment4/A4P1.html
+++ b/Assignments/Assignment4/A4P1.html
@@ -28,7 +28,7 @@
 			<h4><a href="A4P1.html">Home</a></h4>
 			<h4><a href="A4P2.html">Art</a></h4>
 			<h4><a href="A4P3.html">Fun</a></h4>
-			<!-- navigation overlay code from https://www.w3schools.com/howto/howto_js_sidenav.asp -->
+			<!-- “How TO - Side Navigation.” How To Create a Side Navigation Menu, www.w3schools.com/howto/howto_js_sidenav.asp.  -->
 		</div>
 		<div id="content">
 			<div class="slideshow">
@@ -59,7 +59,7 @@
 				<span class="dot" onclick="currentSlide(2)"></span>
 				<span class="dot" onclick="currentSlide(3)"></span>
 			</div>
-			<!--slideshow code from https://www.w3schools.com/howto/howto_js_slideshow.asp -->
+			<!--“How TO - Slideshow.” How To Create a Slideshow, www.w3schools.com/howto/howto_js_slideshow.asp.  -->
 			<h4 style="text-align:center;">Hi, my name is Dana!</h4>
 			<p style="text-align:center;">This is a website to help you get to know me better! I'm a fourth year Bachelor of Accounting Co-op student at Brock University.
 				In my spare time I like playing video games like Animal Crossing, Valorant, and Among Us and trying different mediums of art.
