--- a/Assignments/Assignment4/A4P2.html
+++ b/Assignments/Assignment4/A4P2.html
@@ -28,7 +28,7 @@
 		<h4><a href="A4P1.html">Home</a></h4>
 		<h4><a href="A4P2.html">Art</a></h4>
 		<h4><a href="A4P3.html">Fun</a></h4>
-		<!-- navigation overlay code from https://www.w3schools.com/howto/howto_js_sidenav.asp -->
+		<!-- “How TO - Side Navigation.” How To Create a Side Navigation Menu, www.w3schools.com/howto/howto_js_sidenav.asp.  -->
 	</div>
 	<div id="content">
 		<h3>Hobbies</h3>
@@ -67,7 +67,7 @@
 			<button type="button" id="submitButton" onclick="displayAnswer(); unhideArt()">Submit</button>
 			<a id="showAnswer"></a>
 		</div>
-		<!-- code for quiz from https://www.freecodecamp.org/news/multiple-choice-quiz-template/ -->
+		<!-- Arobelidze, Alexander. “How To Embed Multiple Choice Quiz Questions into Your Article.” FreeCodeCamp.org, FreeCodeCamp.org, 6 Apr. 2020, www.freecodecamp.org/news/multiple-choice-quiz-template/.  -->
 		<div id="art" style="float:right; width:800px; margin-right:50px;">
 			<p>If you guessed the mountain landscape, you were right! That's one of my art pieces. I like to play with all sorts of mediums, though. Here are more things I've created!
 			Hover over the image for a short description of the work.</p>
