--- a/Assignments/Assignment4/A4P3.html
+++ b/Assignments/Assignment4/A4P3.html
@@ -28,7 +28,7 @@
 		<h4><a href="A4P1.html">Home</a></h4>
 		<h4><a href="A4P2.html">Art</a></h4>
 		<h4><a href="A4P3.html">Fun</a></h4>
-		<!-- navigation overlay code from https://www.w3schools.com/howto/howto_js_sidenav.asp -->
+		<!-- “How TO - Side Navigation.” How To Create a Side Navigation Menu, www.w3schools.com/howto/howto_js_sidenav.asp.  -->
 	</div>
 	<div id="content">
 		<h3>Now for some fun!</h3>
@@ -52,9 +52,9 @@
        A 20,20 0,0,1 110,30
        Q 110,60 60,100
        Q 10,60 10,30 z" />
-				 <!-- heart code from https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/d -->
+				 <!-- MDN Contributors. “d.” MDN Web Docs, 17 Sept. 2020, developer.mozilla.org/en-US/docs/Web/SVG/Attribute/d.  -->
 			</svg>
-			<!-- svg code from https://www.w3schools.com/howto/howto_js_scrolldrawing.asp -->
+			<!-- “How TO - Scroll Drawing.” How To Draw on Scroll, www.w3schools.com/howto/howto_js_scrolldrawing.asp.  -->
 		</div>
 		<div class="comments" style="float:right; width:500px;">
 			<h4>Yell into the void!</h4>
